<resources>
    <string name="app_name">Shoe store</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="instruction">Instruction</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="email">Email</string>
    <string name="got_it">Got it</string>
    <string name="welcome_to">Welcome to…</string>
    <string name="shoe_name">Shoe name</string>
    <string name="shoe_company">Shoe company</string>
    <string name="shoe_size">Shoe size</string>
    <string name="shoe_description">Shoe description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="score_format">Current Score: %d</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="shoe_store">Shoe store</string>
    <string name="signin">Sign In</string>
    <string name="instruction_text">On the main screen, tap the Add button (+) to add a shoe to the list</string>
    <string name="edit_shoe">Edit shoe</string>
    <string name="logout">Logout</string>
</resources>
