<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.shoe.ShoeDetailsFragment">

    <data>
        <variable
            name="clickListener"
            type="com.example.android.shoestore.screens.shoe.ShoeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="174dp"
            android:layout_height="38dp"
            android:layout_marginTop="@dimen/normal_64"
            android:text="@string/edit_shoe"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--Name-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/normal_64"
            android:layout_marginTop="@dimen/normal_16"
            android:layout_marginEnd="@dimen/normal_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_name1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={clickListener._shoeName}"
                android:hint="@string/shoe_name" />
        </com.google.android.material.textfield.TextInputLayout>

<!--Company-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_company"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/normal_64"
            android:layout_marginTop="@dimen/normal_16"
            android:layout_marginEnd="@dimen/normal_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_company1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={clickListener._shoeCompany}"
                android:hint="@string/shoe_company" />
        </com.google.android.material.textfield.TextInputLayout>

<!-- Size-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_size"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/normal_64"
            android:layout_marginTop="@dimen/normal_16"
            android:layout_marginEnd="@dimen/normal_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_company">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_size1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={clickListener._shoeSize}"
                android:hint="@string/shoe_size" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        Description-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_description"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_size">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_description1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={clickListener._shoeDescription}"
                android:hint="@string/shoe_description" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_description" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintLeft_toRightOf="@id/button_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>